fix(fuelcalc): make it work on mobile again

--- a/app/fuelcalc/src/components/Form.module.css
+++ b/app/fuelcalc/src/components/Form.module.css
@@ -34,3 +34,9 @@
 		width: calc(100% - 24px);
 	}
 }
+
+@media (prefers-color-scheme: dark) {
+	.form {
+		background-color: rgba(0, 0, 0, 0.8);
+	}
+}
